Preparing the project for restarting

--- a/src/gui/styles/main.less
+++ b/src/gui/styles/main.less
@@ -1,5 +1,11 @@
 * {
 	box-sizing: border-box;
+	-webkit-touch-callout: none; /* iOS Safari */
+		-webkit-user-select: none; /* Safari */
+		 -khtml-user-select: none; /* Konqueror HTML */
+			 -moz-user-select: none; /* Firefox */
+				-ms-user-select: none; /* Internet Explorer/Edge */
+						user-select: none;
 }
 
 html {
@@ -76,6 +82,12 @@ a {
 	position: absolute;
 	bottom: 1em;
 	left: 1em;
+}
+
+.fps.meter {
+	position: absolute;
+	top: 1em;
+	right: 1em;
 }
 
 .tree {
