--- a/src/gui/styles/main.less
+++ b/src/gui/styles/main.less
@@ -1,3 +1,5 @@
+@import './tree.less';
+
 * {
 	box-sizing: border-box;
 	-webkit-touch-callout: none; /* iOS Safari */
@@ -50,6 +52,9 @@ a {
 	align-items: start;
 
 	&.left {
+		display: flex;
+		flex-direction: row;
+		border: 1px solid #870000;
 		left: 1em;
 		top: 1em;
 		&>*:not(:last-child) {
@@ -133,43 +138,6 @@ a {
 
 
 
-.branch {
-	position: relative;
-
-	.label {
-		display: flex;
-		align-items: center;
-		:first-child {
-			margin-right: 0.5em;
-		}
-	}
-	
-	&.collapsed > .content {
-		display: none;
-	}
-
-	.content {
-		margin-left: 1em;
-		position: relative;
-		display: flex;
-		flex-direction: column;
-		> * {
-			::before {
-				position: absolute;
-				content: '';
-				top: -12px;
-				height: 100%;
-				width: 2px;
-				background: #005f87;
-			}
-		}
-		> *:last-child {
-			::before {
-				height: 24px;
-			}
-		}
-	}
-}
 
 .dialog {
 	position: absolute;
